ensure post images don't overflow

--- a/sass/tumblr/_posts.scss
+++ b/sass/tumblr/_posts.scss
@@ -45,6 +45,7 @@
 	img {
 		display: block;
 		margin: 0 auto rhythm(1);
+		max-width: 100%;
 	}
 
 	pre {
